<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView39"
            app:layout_constraintTop_toBottomOf="@+id/textView39">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tenkh"
                android:textColor="@color/black2"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textviewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/email"
                android:textColor="@color/black2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textviewTenKH"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="147dp"
                android:layout_marginRight="147dp"
                android:layout_marginBottom="50dp"
                android:text="@string/tenkh"
                android:textColor="@color/black2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView37"
                app:layout_constraintEnd_toStartOf="@+id/textView39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/diachiemail"
                android:textColor="@color/black2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textviewEmail"
                app:layout_constraintStart_toStartOf="@+id/textviewEmail" />

            <TextView
                android:id="@+id/textviewSDT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sdt2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView39"
                app:layout_constraintVertical_bias="0.689" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="9dp"
                android:text="@string/sdt"
                android:textColor="@color/black2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textviewSDT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textviewTenKH"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</layout>